[package]
name = "lightcone"
version = "0.1.0"
edition = "2021"
authors = ["Noam"]
description = "A relativistic distributed key-value store enforcing causal consistency via spacetime intervals."
repository = "https://github.com/Noamismach/lightcone"
license = "MIT"
keywords = ["distributed-systems", "physics", "quic", "crdt", "relativity"]
categories = ["database", "simulation", "science"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
blake3 = "1"
uuid = { version = "1", features = ["v4", "serde"] }
petgraph = "0.6"
dashmap = "5"
thiserror = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1"
tui-logger = "0.11"
futures = "0.3"
rcgen = "0.13"

# Network stack
quinn = { version = "0.11", features = ["ring"] }
rustls = { version = "0.23", features = ["ring"] }

# Optimize for speed and size in release builds
[profile.release]
lto = true
codegen-units = 1
strip = true